@@ -2120,5 +2120,6 @@
 * pheno:   moved standard output of GeoIP and Lua API to console
 * harald:  g_friendlyFireOpts 8 allows for FF on vehichles (ET_MOVER)
 * pheno:   added g_unlockWeapons cvar for unlocking weapons per class (see docs)
-* pheno:   removed g_mode cvar and added flags 2048 (instant spawn), 4096 (adrenaline for all) and
-           8192 (no damage) to g_misc cvar (see docs) 
+* pheno:   removed g_mode cvar and added flags 2048 (instant spawn), 4096 (adrenaline) and
+           8192 (no damage) to g_misc cvar (see docs)
+* pheno:   added server gameplay cvar change announcement
